tests/should_fail/option_must_use_readfile.nv
module main

// SHOULD FAIL: bare readFile returns Option(String) — must be used
readFile("some_file.txt")
println("should not reach")
